Fixed navbar spacing for tablet viewport.

--- a/app/assets/stylesheets/shared/nav.sass
+++ b/app/assets/stylesheets/shared/nav.sass
@@ -14,6 +14,7 @@
           color: #ffffff
           font-weight: 400
           overflow: hidden
+          padding: 1.24em
           text-decoration: none
 
         li
